--- a/index.html
+++ b/index.html
@@ -13,26 +13,24 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
+    <link rel="stylesheet" href="./main.css">
    
+   </head>
+   <body>    
+       <header>
+           Header Content
+      </header>
+
+       <main>
+           Main Content
+       </main>
+
+       <footer>
+           Footer Content
+       </footer>
+</body>
+  
 
 
 
-
-</head>
-
-
-
-<body>
-   <header>
-    Header content
-   </header>
-
-    <main>
-        main content
-    </main>
-
-    <footer>
-        Footer content
-    </footer>
-  </body>
 </html>
