--- a/index.html
+++ b/index.html
@@ -16,18 +16,25 @@
     <link rel="stylesheet" href="./main.css">
    
    </head>
+   
    <body>    
        <header>
-           Header Content
-      </header>
+          <img src="./logopirms.png" alt="Logo">
+          <nav>
+            <a href="#">About</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Job</a>
+            <a href="#">Contact</a>
+            </nav>
+          </header>
 
        <main>
            Main Content
-       </main>
+        </main>
 
        <footer>
            Footer Content
-       </footer>
+        </footer>
 </body>
   
 
