--- a/index.html
+++ b/index.html
@@ -29,7 +29,16 @@
           </header>
 
        <main>
-           Main Content
+           <div>
+            <h1>404 Lost in Space</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+            Fuga rerum odit quo enim. Amet asperiores nulla consectetur itaque voluptatem ipsam odit eos consequuntur accusantium!</p>
+            <div>
+                <a href="#">Go Home</a>
+                <a href="#">Back</a>
+           </div>
+         </div>
+           <img src="./astronautass.webp" alt="Astro su telefu">
         </main>
 
        <footer>
