--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
 
        <main>
            <div>
-            <h1>404 Lost in Space</h1>
+              <h1>
+               <span>404</span> Lost in Space</h1>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
             Fuga rerum odit quo enim. Amet asperiores nulla consectetur itaque voluptatem ipsam odit eos consequuntur accusantium!</p>
             <div>
