--- a/index.html
+++ b/index.html
@@ -13,37 +13,44 @@
     <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./main.css">
+    <link rel="stylesheet" href="./css/font-awesome.min.css">
+    <link rel="stylesheet" href="css/main.css">
    
    </head>
    
    <body>    
-       <header>
-          <img src="./logopirms.png" alt="Logo">
-          <nav>
-            <a href="#">About</a>
-            <a href="#">Portfolio</a>
-            <a href="#">Job</a>
-            <a href="#">Contact</a>
+       <header class="container main-header">
+          <img class="logo" src="./img/logopirms.png" alt="Logo">
+          <nav class="main-nav">
+            <a class="link" href="#">About</a>
+            <a class="link" href="#">Portfolio</a>
+            <a class="link" href="#">Job</a>
+            <a class="link" href="#">Contact</a>
             </nav>
           </header>
 
-       <main>
-           <div>
-              <h1>
-               <span>404</span> Lost in Space</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-            Fuga rerum odit quo enim. Amet asperiores nulla consectetur itaque voluptatem ipsam odit eos consequuntur accusantium!</p>
-            <div>
-                <a href="#">Go Home</a>
-                <a href="#">Back</a>
+       <main class="container">
+           <div class="left-column">
+              <h1 class="main-title">
+               <span>404</span>Lost in Space</h1>
+            <p class="descriptio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rerum odit quo enim. Amet asperiores nulla consectetur itaque voluptatem ipsam odit eos consequuntur accusantium!</p>
+            <div class="button-group">
+                <a class="button" href="#">Go Home</a>
+                <a class="button" href="#">Back</a>
            </div>
          </div>
-           <img src="./astronautass.webp" alt="Astro su telefu">
+           <img class="right-column" src="./Img/astronautass.webp" alt="Astro su telefu">
         </main>
 
-       <footer>
-           Footer Content
+       <footer class="container">
+          <div class="Socials">
+            <i class="fa fa-gavel" aria-hidden="true"></i>
+            <a href="#" target="_blank">FB</a>
+            <a href="#" target="_blank">TW</a>
+            <a href="#" target="_blank">IG</a>
+            <a href="#" target="">LN</a>
+            </div>
+          <p class="copyright">&copy; 2023 - All rights reserved</p>
         </footer>
 </body>
   
