--- a/index.html
+++ b/index.html
@@ -1,60 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Astro</title>
-    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="./favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="./favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="./favicon/favicon-16x16.png">
-    <link rel="manifest" href="./favicon/site.webmanifest">
-    <link rel="mask-icon" href="./favicon/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-    <link rel="stylesheet" href="./css/font-awesome.min.css">
-    <link rel="stylesheet" href="css/main.css">
-   
-   </head>
-   
-   <body>    
-       <header class="container main-header">
-          <img class="logo" src="./img/logopirms.png" alt="Logo">
-          <nav class="main-nav">
-            <a class="link" href="#">About</a>
-            <a class="link" href="#">Portfolio</a>
-            <a class="link" href="#">Job</a>
-            <a class="link" href="#">Contact</a>
-            </nav>
-          </header>
+    <link rel="shortcut icon" href="./favicon.ico" type="image/x-icon" />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./favicon/site.webmanifest" />
+    <link
+      rel="mask-icon"
+      href="./favicon/safari-pinned-tab.svg"
+      color="#5bbad5"
+    />
+    <meta name="msapplication-TileColor" content="#da532c" />
+    <meta name="theme-color" content="#ffffff" />
+    <link rel="stylesheet" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
 
-       <main class="container">
-           <div class="left-column">
-              <h1 class="main-title">
-               <span>404</span>Lost in Space</h1>
-            <p class="descriptio">Lorem ipsum dolor sit amet consectetur adipisicing elit. Fuga rerum odit quo enim. Amet asperiores nulla consectetur itaque voluptatem ipsam odit eos consequuntur accusantium!</p>
-            <div class="button-group">
-                <a class="button" href="#">Go Home</a>
-                <a class="button" href="#">Back</a>
-           </div>
-         </div>
-           <img class="right-column" src="./Img/astronautass.webp" alt="Astro su telefu">
-        </main>
+  <body>
+    <header class="container main-header">
+      <img class="logo" src="./img/logopirms.png" alt="Logo" />
+      <nav class="main-nav">
+        <a class="link" href="#">About</a>
+        <a class="link" href="#">Portfolio</a>
+        <a class="link" href="#">Job</a>
+        <a class="link" href="#">Contact</a>
+    </nav>
+</header>
 
-       <footer class="container">
-          <div class="Socials">
-            <i class="fa fa-gavel" aria-hidden="true"></i>
-            <a href="#" target="_blank">FB</a>
-            <a href="#" target="_blank">TW</a>
-            <a href="#" target="_blank">IG</a>
-            <a href="#" target="">LN</a>
-            </div>
-          <p class="copyright">&copy; 2023 - All rights reserved</p>
-        </footer>
+<main class="container">
+    <div class="left-column">
+        <h1 class="main-title"><span>404</span>Lost in space</h1>
+        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas non numquam eum reiciendis. Deserunt dolorum quasi dicta ratione assumenda sit nemo laudantium quis excepturi.</p>
+        <div class="button-group">
+            <a class="button" href="#">Go home</a>
+            <a class="button" href="#">Back</a>
+        </div>
+    </div>
+    <img class="right-column" src="./Img/astronautass.webp" alt="Astronautas su telefonu">
+</main>
+
+<footer class="container">
+    <div class="socials">
+        <a class="social-link fa fa-facebook-official" href="#" target="_blank" title="Facebook"></a>
+        <a class="social-link fa fa-twitter" href="#" target="_blank" title="Twitter"></a>
+        <a class="social-link fa fa-instagram" href="#" target="_blank" title="Instagram"></a>
+        <a class="social-link fa fa-linkedin-square" href="#" target="_blank" title="Linkedin"></a>
+    </div>
+    <p class="copyright">&copy; 2023 - All rights reserved</p>
+</footer>
+
 </body>
-  
-
-
 
 </html>
