--- a/index.html
+++ b/index.html
@@ -32,7 +32,13 @@
     <meta name="msapplication-TileColor" content="#da532c" />
     <meta name="theme-color" content="#ffffff" />
     <link rel="stylesheet" href="./css/font-awesome.min.css" />
+    <link rel="stylesheet" href="./css/button.css">
+    <link rel="stylesheet" href="./css/header.css">
+    <link rel="stylesheet" href="./css/socials.css">
+    
+    
     <link rel="stylesheet" href="css/main.css" />
+  
   </head>
 
   <body>
@@ -43,31 +49,57 @@
         <a class="link" href="#">Portfolio</a>
         <a class="link" href="#">Job</a>
         <a class="link" href="#">Contact</a>
-    </nav>
-</header>
+      </nav>
+    </header>
 
-<main class="container">
-    <div class="left-column">
+    <main class="container">
+      <div class="left-column">
         <h1 class="main-title"><span>404</span>Lost in space</h1>
-        <p class="description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas non numquam eum reiciendis. Deserunt dolorum quasi dicta ratione assumenda sit nemo laudantium quis excepturi.</p>
+        <p class="description">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas non
+          numquam eum reiciendis. Deserunt dolorum quasi dicta ratione assumenda
+          sit nemo laudantium quis excepturi.
+        </p>
         <div class="button-group">
-            <a class="button" href="#">Go home</a>
-            <a class="button" href="#">Back</a>
+          <a class="button" href="#">Go home</a>
+          <a class="button" href="#">Back</a>
         </div>
-    </div>
-    <img class="right-column" src="./Img/astronautass.webp" alt="Astronautas su telefonu">
-</main>
+      </div>
+      <img
+        class="right-column"
+        src="./Img/astronautass.webp"
+        alt="Astronautas su telefonu"
+      />
+    </main>
 
-<footer class="container">
-    <div class="socials">
-        <a class="social-link fa fa-facebook-official" href="#" target="_blank" title="Facebook"></a>
-        <a class="social-link fa fa-twitter" href="#" target="_blank" title="Twitter"></a>
-        <a class="social-link fa fa-instagram" href="#" target="_blank" title="Instagram"></a>
-        <a class="social-link fa fa-linkedin-square" href="#" target="_blank" title="Linkedin"></a>
-    </div>
-    <p class="copyright">&copy; 2023 - All rights reserved</p>
-</footer>
-
-</body>
-
+    <footer class="container">
+      <div class="socials">
+        <a
+          class="social-link fa fa-facebook-official"
+          href="#"
+          target="_blank"
+          title="Facebook"
+        ></a>
+        <a
+          class="social-link fa fa-twitter"
+          href="#"
+          target="_blank"
+          title="Twitter"
+        ></a>
+        <a
+          class="social-link fa fa-instagram"
+          href="#"
+          target="_blank"
+          title="Instagram"
+        ></a>
+        <a
+          class="social-link fa fa-linkedin-square"
+          href="#"
+          target="_blank"
+          title="Linkedin"
+        ></a>
+      </div>
+      <p class="copyright">&copy; 2023 - All rights reserved</p>
+    </footer>
+  </body>
 </html>
